ungrammar_lsp/src/snapshots/ungrammar_lsp__tests__prefix_serde.snap
---
source: ungrammar_lsp/src/main.rs
expression: "&json_str"
---
"{\"foo_hello\":\"ungrammar_lsp\",\"foo_world\":0}"
